# mfrr-forecast

./: .gitignore
etl/scratch/: README.md
etl/src/: volue_actuals_ingestion.ipynb
mlops/: README.md  databricks.yml  pyproject.toml
mlops/src/ingestion/: __init__.py
