[project]
name = "mfrr_forecast"
version = "0.1.0"
description = "MLOps Project for mfrr forecasting"
authors = [
    { name = "Rosamelia Carioni", email = "rosamelia.carioni@fortum.com" },
]
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "pandas-stubs>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "mlflow>=3.2.0",
    "databricks-sdk>=0.73.0",
    "optuna>=3.4.0",
    "shap>=0.49.1",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "pyyaml>=6.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.28.0",
    "xgboost>=3.1.0",
    "catboost>=1.2.8",
    "sklearn-preprocessing>=0.1.0",
    "optuna-integration>=4.5.0",
    "networkx>=3.0,<3.6",
    "volue-insight-timeseries>=1.0.0",

]
requires-python = "== 3.12.3"

[project.scripts]
# Main MLOps entry points
run_forecasting = "entry_points:run_forecasting"
run_validation = "entry_points:run_validation"
run_deployment = "entry_points:run_deployment"
run_inference = "entry_points:run_inference"
publish_results = "entry_points:run_publish_results"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "scipy-stubs>=1.15.0,<1.16.3",
    "types-networkx>=3.0.0,<3.6.0",
    "types-requests>=2.32.4.20250913",
    # PySpark and Delta Lake for local testing (standalone, not databricks-connect)
    "pyspark>=3.5.3,<3.6.0",
    # setuptools provides distutils for Python 3.12+ (removed from stdlib)
    "setuptools>=65.0.0",
    "pyYAML>=6.0.3",
    "types-PyYAML>=6.0.12",

]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    #### modules
    "ANN", # flake8-annotations
    # "COM", # flake8-commas
    # "C90", # mccabe complexity
    # "DJ",  # django
    # "EXE", # flake8-executable
    # "T10", # debugger
    # "TID", # flake8-tidy-imports

    #### specific rules
    "D100",     # ignore missing docs
    "D101",     # ignore missing class docstring
    "D102",     # ignore missing method docstring
    "D103",     # ignore missing function docstring
    "D104",     # ignore missing package docstring
    "D105",     # ignore missing magic method docstring
    "D106",     # ignore missing nested class docstring
    "D107",     # ignore missing __init__ docstring
    "D200",     # ignore one-line docstring rules
    "D203",     # ignore blank line before class docstring
    "D205",     # ignore summary line whitespace rules
    "D212",     # allow multi-line docstring summary on same line
    "D211",     # ignore blank line before docstring
    "D400",     # ignore end-of-summary period rule
    "D401",     # ignore imperative mood requirement
    "D415",     # ignore docstring section underline rules
    "E402",     # false positives for local imports
    "E501",     # line too long
    "TRY003",   # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002",   # too verbose descriptions of todos
    "S101",     # use of assert statements
    "ERA001",   # found commented out code
    "PTH123",   # use Path.open() instead of open(),
    "PLC0414",  # Import alias does not rename original package,
    "COM812",
    "UP046",    # "Generic class uses `Generic` subclass instead of type parameters"
    "G004",     # logging statement uses f-string,
    "ASYNC109", # ignore blocking async calls check
]
exclude = [
    ".git",
    "build",
    "__pycache__",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "**/*.ipynb",
    "**/notebooks/**",
    "**/*notebooks*/**",
]

[tool.ruff.lint.per-file-ignores]
"entry_points.py" = ["PLR0915"]  # Entry points require many statements for arg parsing

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
pythonpath = "src"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
]
filterwarnings = [
    "ignore:np.find_common_type is deprecated:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forflex_mlops_project"]

[tool.mypy]
files = "src, tests"
allow_redefinition = true
strict = true
exclude = ["conftest\\.py$", "notebooks", ".*notebooks.*"]

# Ignore missing imports for pyspark and other untyped libraries
[[tool.mypy.overrides]]
module = ["pyspark.dbutils", "networkx", "delta.tables"]
ignore_missing_imports = true



